fixes missing color variable

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,10 +17,6 @@
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
     }
 }
 
